--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "prod": "webpack -p --progress --hide-modules"
   },
   "dependencies": {
-    "element-ui": "^1.1.2",
-    "vue": "^2.1.8",
+    "element-ui": "^2.0.0",
+    "vue": "^2.5.2",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1",
     "vuex": "^2.1.1"
@@ -29,10 +29,11 @@
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.24.1",
     "postcss-loader": "^1.3.3",
+    "rimraf": "^2.5.4",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
-    "vue-loader": "^11.1.4",
-    "vue-template-compiler": "^2.1.8",
+    "vue-loader": "^13.3.0",
+    "vue-template-compiler": "^2.5.2",
     "velocity-animate": "^1.5.0",
     "v-charts": "^1.6.0",
     "echarts": "^3.6.0",
